[AutoDiff] Fix semantic member accessor pullbacks ownership errors.

Fix ownership errors in semantic member accessor pullbacks:
- Getter pullbacks: emit copy value operation before storing value.
- Setter pullbacks: track loaded value as a temporary, to be destroyed.

Add tests covering trivial, non-trivial, and address-only properties.
Resolves SR-12778 and SR-12779.